[package]
name = "ngix_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nginx_config_parser"
version = "0.1.0"
edition ="2021"
path = "nginx_parser_lib/lib.rs"

[dependencies]
tui         = "0.18"
crossterm   = "0.23"
nom         = "7.1.1"
# I should probs use serde for serialisation of nginx configs. 
serde = { version = "1.0.138", features = ["derive"]  }
serde_json = "1.0.82"